[package]
name = "tokio-named-pipes"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Nikolay Volf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nikvolf/tokio-named-pipes"
homepage = "https://github.com/nikvolf/tokio-named-pipes"
description = """
Windows named pipe bindings for tokio.
"""

[dependencies]
mio = "0.6"
tokio = "0.1"
mio-named-pipes = "0.1"
futures = "0.1"
bytes = "0.4"